--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 <section class="yoga-classes">
     <div class="container yoga-box">
         <h2>CHOOSE YOUR CLASSES AND START YOUR TRAINING</h2>
-        <button class="btn">Write to us</button>
+        <button class="btn">WRITE TO US</button>
     </div>
 </section>
 
